testsuite/tests/gprname-invalid-gpr-file/test.out
gprname returned 4
prj.gpr:2:04: error: Expected Identifier, got ';'
gprname: failed to load project tree

